<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <Button
        android:id="@+id/n1"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n1"
        app:layout_constraintBottom_toTopOf="@+id/n4"
        app:layout_constraintEnd_toStartOf="@+id/n2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit" />

    <Button
        android:id="@+id/n2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n2"
        app:layout_constraintBottom_toTopOf="@+id/n5"
        app:layout_constraintEnd_toStartOf="@+id/n3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n1"
        app:layout_constraintTop_toBottomOf="@+id/clrear" />

    <Button
        android:id="@+id/n3"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n3"
        app:layout_constraintBottom_toTopOf="@+id/n6"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n2"
        app:layout_constraintTop_toBottomOf="@+id/blank" />

    <Button
        android:id="@+id/n4"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n4"
        app:layout_constraintBottom_toTopOf="@+id/n7"
        app:layout_constraintEnd_toStartOf="@+id/n5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n1" />

    <Button
        android:id="@+id/n5"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n5"
        app:layout_constraintBottom_toTopOf="@+id/n8"
        app:layout_constraintEnd_toStartOf="@+id/n6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n4"
        app:layout_constraintTop_toBottomOf="@+id/n2" />

    <Button
        android:id="@+id/n6"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n6"
        app:layout_constraintBottom_toTopOf="@+id/n9"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n5"
        app:layout_constraintTop_toBottomOf="@+id/n3" />

    <Button
        android:id="@+id/n7"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n7"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toStartOf="@+id/n8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n4" />

    <Button
        android:id="@+id/n8"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n8"
        app:layout_constraintBottom_toTopOf="@+id/n0"
        app:layout_constraintEnd_toStartOf="@+id/n9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n7"
        app:layout_constraintTop_toBottomOf="@+id/n5" />

    <Button
        android:id="@+id/n9"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n9"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n8"
        app:layout_constraintTop_toBottomOf="@+id/n6" />

    <Button
        android:id="@+id/n0"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/n0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/list"
        app:layout_constraintTop_toBottomOf="@+id/n8" />

    <Button
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blank"
        app:layout_constraintTop_toBottomOf="@+id/calculatorTextView" />

    <Button
        android:id="@+id/blank"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/n3"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clrear"
        app:layout_constraintTop_toBottomOf="@+id/calculatorTextView" />

    <Button
        android:id="@+id/clrear"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="clearButtonClick"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/n2"
        app:layout_constraintEnd_toStartOf="@+id/blank"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/exit"
        app:layout_constraintTop_toBottomOf="@+id/calculatorTextView" />

    <Button
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="exitButtonClick"
        android:text="@string/exit"
        app:layout_constraintBottom_toTopOf="@+id/n1"
        app:layout_constraintEnd_toStartOf="@+id/clrear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorTextView" />

    <Button
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="listButtonClick"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/n0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n7" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/subtract"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n6"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/n9"
        app:layout_constraintTop_toBottomOf="@+id/subtract" />

    <Button
        android:id="@+id/sum"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="sumButtonClick"
        android:text="@string/sum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/dot"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n0"
        app:layout_constraintTop_toBottomOf="@+id/n9" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:onClick="numberOrOperatorButtonClick"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n3"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <TextView
        android:id="@+id/calculatorTextView"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:gravity="end"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>